--- a/src/assests/css/App.css
+++ b/src/assests/css/App.css
@@ -202,12 +202,27 @@ body {
   margin-right: 20px;
   
 }
+#Modal{
+  top: '50%';
+  left: '50%';
+  right: 'auto';
+  bottom: 'auto';
+  transform: 'translate(-50%, -50%)';
+}
 
 .btn-warning{
-  background: rgb(255, 176, 29) !important;
+  background: rgb(243, 158, 0) !important;
   color:white !important;
   float:left;
   margin-right: 20px;
+}
+.div-Modal{
+  display: block;
+  float:center;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  font-size: 17px;
 }
 .btn-success{
   background: rgb(23, 150, 19);
@@ -231,16 +246,6 @@ body {
   font-size: 17px;
 }
 
-input[type="text"],
-textarea,
-input[type="file"]{
-  width: 100%;
-  min-height: 30px;
-  border: 1px solid #ccc;
-  padding: 3px;
-  margin-bottom: 5px;
-  transition: 300ms all;
-}
 
 input[type="text"]:focus,
 textarea:focus{
